--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,41 @@ h3, a {
 
 #cloud-top {
 	position: absolute;
-	right: 20%;
+	left: 60%;
+	animation-name: clouds;
+	animation-duration: 4.5s;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+	animation-iteration-count: infinite;
 }
 
 #cloud-bottom {
 	position: absolute;
-	top: 10%;
+	top: 7%;
 	left: 20%;
+	animation-name: clouds2;
+	animation-duration: 4.5s;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+	animation-iteration-count: infinite;
+}
+
+@keyframes clouds {
+	0%{left: 60%}
+	50%{left: 61%}
+	100%{left: 60%}
+}
+
+@keyframes clouds2 {
+	0%{left: 20%}
+	50%{left: 21%}
+	100%{left: 20%}
+}
+
+
+
+.clouds, #mountain {
+	filter: drop-shadow(0px 3px 5px rgba(0,0,0,0.75));
 }
 
 hr {
@@ -83,7 +111,7 @@ hr {
 
 #avatar {
 	width: 15%;
-	filter: drop-shadow(0px 0px 6px rgba(0,0,0,0.75));
+	filter: drop-shadow(0px 0px 6px rgba(0,0,0,0.75)) grayscale(25%);
 }
 
 @media (max-width: 950px) {
@@ -144,6 +172,11 @@ a {
 	padding: 50px 0 20px;
 }
 
+.bottom-container p {
+	color: rgba(255, 255, 255, 0.5);
+}
+
+
 ul {
 	list-style-type: none;
 	margin: 100px auto;
@@ -190,39 +223,6 @@ ul {
 	animation-iteration-count: infinite;
 	animation-timing-function: linear;
 }
-/*
-.dot1 {
-	animation-name: dot11;
-	animation-duration: 7s;
-	animation-fill-mode: backwards;
-	animation-iteration-count: infinite;
-	animation-timing-function: step-start;
-}
-
-.dot2 {
-	animation-name: dot22;
-	animation-duration: 7s;
-	animation-fill-mode: backwards;
-	animation-iteration-count: infinite;
-	animation-timing-function: step-start;
-}
-
-.dot3 {
-	animation-name: dot33;
-	animation-duration: 7s;
-	animation-fill-mode: backwards;
-	animation-iteration-count: infinite;
-	animation-timing-function: step-start;
-}
-
-.dot4 {
-	animation-name: dot44;
-	animation-duration: 7s;
-	animation-fill-mode: backwards;
-	animation-iteration-count: infinite;
-	animation-timing-function: step-start;
-}*/
-
 
 
 @keyframes dot1 {
@@ -305,85 +305,33 @@ ul {
 	100%{top: 0;}
 }
 
-/*@keyframes dot11 {
-	0%{}
-	6.25%{background-color: #d25b52;}
-	12.5%{}
-	18.75%{}
-	25%{}
-	31.25%{}
-	37.5%{}
-	43.75%{}
-	50%{}
-	56.25%{}
-	62.50%{}
-	68.75%{}
-	75%{}
-	81.25%{}
-	87.5%{}
-	93.75%{}
-	100%{}
+.hello-bubble {
+	border: 2px solid transparent;
+    background: #efefef;
+    -webkit-border-radius: 45px;
+            border-radius: 45px;
+    font-size: 1.2rem;
+    line-height: 1.3;
+    margin: 0 auto 40px;
+    max-width: 200px;
+    height: 40px;
+    padding: 15px;
+    position: relative;
+    right: 50px;
 }
 
-@keyframes dot22 {
-	0%{}
-	6.25%{}
-	12.5%{}
-	18.75%{}
-	25%{background-color: #d25b52;}
-	31.25%{}
-	37.5%{}
-	43.75%{}
-	50%{}
-	56.25%{}
-	62.50%{}
-	68.75%{}
-	75%{}
-	81.25%{}
-	87.5%{}
-	93.75%{}
-	100%{}
+.hello-bubble p {
+    margin: 0 0 10px;
+}
+.hello-bubble p:last-of-type {
+    margin-bottom: 0;
 }
 
-@keyframes dot33 {
-	0%{}
-	6.25%{}
-	12.5%{}
-	18.75%{}
-	25%{}
-	31.25%{}
-	37.5%{}
-	43.75%{background-color: #d25b52;}
-	50%{}
-	56.25%{}
-	62.50%{}
-	68.75%{}
-	75%{}
-	81.25%{}
-	87.5%{}
-	93.75%{}
-	100%{}
+.hello-bubble::after {
+    border-left: 20px solid transparent;
+    border-top: 20px solid #efefef;
+    bottom: -20px;
+    content: "";
+    position: absolute;
+    right: 23px;
 }
-
-@keyframes dot44 {
-	0%{}
-	6.25%{}
-	12.5%{}
-	18.75%{}
-	25%{}
-	31.25%{}
-	37.5%{}
-	43.75%{}
-	50%{}
-	56.25%{}
-	62.50%{background-color: #d25b52;}
-	68.75%{}
-	75%{}
-	81.25%{}
-	87.5%{}
-	93.75%{}
-	100%{}
-}
-*/
-
-
